Fix dark mode settings

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    color-scheme: light dark;
+}
+
 body, html {
     margin: 0px;
     padding: 0px;
@@ -301,10 +305,6 @@ h1, h3, h6 {
     width: 48%;
 }
 
-.project-cell:hover {
-    box-shadow: 1px 4px 10px 2px rgba(0, 0, 0, 0.15);
-}
-
 .project-cell h3 {
     font-size: 1.2em;
     font-weight: 400;
@@ -572,7 +572,7 @@ footer p {
         justify-content: center;
     }
 
-    .experience-container {
+    .experience-ct {
         width : 100%;
         flex-direction: column;
         align-items: flex-start;
@@ -626,5 +626,119 @@ footer p {
 
     .contact-container {
         width: 150%;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #210B2C;
+    }
+
+    .sup-title {
+        color: white;
+    }
+
+    .container {
+        box-shadow: 1px 4px 10px 2px rgba(255, 255, 255, 0.2);
+    }
+    
+    .container:hover {
+        box-shadow: 1px 4px 10px 2px rgba(255, 255, 255, 0.3);
+    }
+
+    .company-name {
+        color: white;
+    }
+
+    .role-duration {
+        color: #c2c2c2;
+    }
+
+    .place {
+        color: #b8b8b8;
+    }
+
+    .description {
+        color: #ffffff;
+    }
+
+    
+    .container-footer a {
+        color: white;
+    }
+
+    .project-cell h3 {
+        color: white;
+    }
+
+    
+    .project-cell li {
+        color: white;
+    }
+
+    .article-cell a {
+        color: white;
+    }
+    
+    .article-title h3{
+        color: white;
+    }
+    
+    .article-title p {
+        color: #c2c2c2;
+    }
+
+    .achievement-category {
+        color: white;
+    }
+
+    .achievement-special {
+        box-shadow: none;
+    }
+
+    .achievement-special:hover {
+        box-shadow: none;
+    }
+
+    .achievement-title h3{
+        color: white;
+    }
+
+    .achievement-title p {
+        color: #c2c2c2;
+    }
+
+    .more-cell {
+        box-shadow: 1px 4px 10px 2px rgba(255, 255, 255, 0.1);
+    }
+
+    .more-cell:hover {
+        box-shadow: 1px 4px 10px 2px rgba(255, 255, 255, 0.18);
+    }
+
+    .get-touch-bg {
+        opacity: 0.7;
+        display: block;
+        width: 100%;
+        height: 700px;
+        transition: .5s ease;
+        backface-visibility: hidden;
+    }
+
+    .contact-container {
+        background-color: rgba(255, 255, 255, 0.3);
+        padding: 20px;
+        width: 70%;
+        margin: 3vh 0;
+    }
+
+    input[type=text], select, textarea {
+        border: 1px solid rgb(74, 74, 74);
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    input[type=text]::placeholder, select::placeholder, textarea::placeholder {
+        color: white;
+        opacity: .45;
     }
 }
